--- a/GoogleCodeJam/GoogleCodeJam.csproj
+++ b/GoogleCodeJam/GoogleCodeJam.csproj
@@ -56,6 +56,8 @@
     <Compile Include="StoreCreditProblem.cs" />
     <Compile Include="T9Cases.cs" />
     <Compile Include="T9Problem.cs" />
+    <Compile Include="WatershedsCases.cs" />
+    <Compile Include="WatershedsProblem.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
